# visualizrs

./: .gitignore  Cargo.toml  Makefile  README.md
assets/icons/: icon.icns  icon.xcf
scripts/: customize_plist.sh
src/: application.rs  audio.rs  main.rs
src/audio/: util.rs
src/renderer/: eye_of_hal.rs  frequalizer.rs  mod.rs  stereo_tree.rs
src/traits/: mod.rs  renderer.rs  ui_element.rs
src/user_interface/: dropdown.rs  mod.rs  util.rs
